add coverage to req

--- a/requirements.txt
+++ b/requirements.txt
@@ -9,12 +9,12 @@ setuptools>=26
 # pandas
 # scikit-learn
 
-# # tests/linter
-# black
-# coverage
-# flake8
-# pytest
-# yapf
+# tests/linter
+black
+coverage
+flake8
+pytest
+yapf
 
 # # API
 # gcsfs
