--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -45,3 +45,6 @@ jobs:
         heroku_api_key: ${{secrets.HEROKU_API_KEY}}
         heroku_app_name: "han-bbquote" # Must be unique in Heroku
         heroku_email: ${{secrets.HEROKU_EMAIL}}
+    - name: Scale Dyno
+      run: |
+        heroku ps:scale web=1
